# omorfi-python

./: README.md  pyproject.toml  setup.cfg  setup.py
